Bug 427692 - Krita Android 4.4.0 stable lists all translations, but they are not being used
Summary: Krita Android 4.4.0 stable lists all translations, but they are not being used
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Translation (other bugs)
Version First Reported In: 4.4.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: sh_zam
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-14 13:14 UTC by Tyson Tan
Modified: 2020-10-28 09:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tyson Tan 2020-10-14 13:14:04 UTC
The current stable Android version (4.4.0) has all translations listed in the Settings > Switch Language menu, but no matter which one is being chosen, Krita can only display English. The translation files are not being used.
Comment 1 sh_zam 2020-10-19 12:11:34 UTC
Assigning this to myself.
Comment 2 sh_zam 2020-10-20 12:36:11 UTC
Git commit 5b11a4cc59b697665cb4770e520aa2250300e32c by Sharaf Zaman.
Committed on 20/10/2020 at 12:35.
Pushed by szaman into branch 'krita/4.3'.

Bugfix: Translations not being used

This only makes the translations work if they're explicitly selected in
the switcher.

QLocale::system() does not work reliably (most likely due to a race
condition).

M  +6    -0    krita/main.cc

https://invent.kde.org/graphics/krita/commit/5b11a4cc59b697665cb4770e520aa2250300e32c
Comment 3 sh_zam 2020-10-20 12:38:17 UTC
Git commit e84519d2082bc88be4f23f38616225c7dcdefee9 by Sharaf Zaman.
Committed on 20/10/2020 at 12:38.
Pushed by szaman into branch 'master'.

Bugfix: Translations not being used

This only makes the translations work if they're explicitly selected in
the switcher.

QLocale::system() does not work reliably (most likely due to a race
condition).


(cherry picked from commit 5b11a4cc59b697665cb4770e520aa2250300e32c)

M  +6    -0    krita/main.cc

https://invent.kde.org/graphics/krita/commit/e84519d2082bc88be4f23f38616225c7dcdefee9
Comment 4 Tyson Tan 2020-10-21 01:46:11 UTC
Thank you, Sharaf! :D
Comment 5 sh_zam 2020-10-28 09:56:18 UTC
Git commit 68ea402a4226d1756a2438af34b86f818b1133a6 by Sharaf Zaman.
Committed on 28/10/2020 at 09:48.
Pushed by szaman into branch 'krita/4.4.0'.

Bugfix: Translations not being used

This only makes the translations work if they're explicitly selected in
the switcher.

QLocale::system() does not work reliably (most likely due to a race
condition).

(cherry picked from 5b11a4cc59b697665cb4770e520aa2250300e32c)

M  +6    -0    krita/main.cc

https://invent.kde.org/graphics/krita/commit/68ea402a4226d1756a2438af34b86f818b1133a6