Bugfix: Translations not being used

This only makes the translations work if they're explicitly selected in
the switcher.

QLocale::system() does not work reliably (most likely due to a race
condition).

BUG:427692


(cherry picked from commit 5b11a4cc59b697665cb4770e520aa2250300e32c)